--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node server/index.js",
-    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "node server/index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
